# lyzr-assignment

./: .gitignore  readme.md  test.html
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/src/backend/: connection_manager.py  crud.py  database.py  main.py  models.py  redis_client.py  schema.py  session_manager.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/components/: Center.tsx  ConfirmationPopover.tsx  CustomLinearPercentIndicator.tsx
frontend/app/components/PollGridView/: PollGridView.tsx  index.ts
frontend/app/components/PollGridView/components/: PollCard.tsx  PollCardBody.tsx  PollCardFooter.tsx  PollCardHeader.tsx
frontend/app/components/PollView/: PollView.tsx
frontend/app/components/PollView/components/: PollViewHeader.tsx
frontend/app/components/PollView/hooks/: usePollData.ts  usePollSocket.ts
frontend/app/components/forms/DatePicker/: DatePicker.tsx
frontend/app/components/forms/SelectInput/: SelectInput.tsx
frontend/app/components/forms/TextInput/: TextInput.tsx
frontend/app/components/forms/TextareaInput/: TextareaInput.tsx
frontend/app/components/modals/: GlobalModal.tsx
frontend/app/components/modals/PollFormModal/: PollFormModal.tsx  index.ts
frontend/app/components/modals/PollFormModal/components/: PollForm.tsx
frontend/app/hooks/: useDebounce.ts
frontend/app/services/: websocket.ts
frontend/app/stores/: modal.ts  poll.ts  socket.ts
frontend/app/types/: Poll.ts
frontend/app/utils/: apiClient.ts
frontend/styles/: globals.css
(+3 files in other folders)
